Add system diagnostics to root cause YARN lost node errors
Captures disk usage, memory, load average, and /tmp usage when session
dies to identify whether it's disk (>90%), memory, or other issue.

--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -48,6 +48,12 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-maven-
     -
+      name: Check disk space
+      run: |
+        echo "=== Disk Space ==="
+        df -h
+        echo "=================="
+    -
       name: Set Python 3 as default
       run: |
         pyenv global 3
