--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,7 @@
     <scalatest.version>3.0.8</scalatest.version>
     <scalatra.version>2.6.5</scalatra.version>
     <java.version>1.8</java.version>
+    <scala.maven.version>4.3.0</scala.maven.version>
     <extraJavaTestArgs>
       -XX:+IgnoreUnrecognizedVMOptions
       --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
@@ -907,7 +908,7 @@
         <plugin>
           <groupId>net.alchim31.maven</groupId>
           <artifactId>scala-maven-plugin</artifactId>
-          <version>4.3.0</version>
+          <version>${scala.maven.version}</version>
           <executions>
             <execution>
               <goals>
