[LIVY-1036] Run both unit tests and integration tests on new PRs
** What changes were proposed in this pull request?

Currently only integration tests are run on new PRs. Unit tests could also be
launched to ensure code quality.

** How was this patch tested?

- Tested on Github PR.

--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -15,7 +15,10 @@
 # limitations under the License.
 #
 name: Unit Tests
-on: [push]
+on:
+  push:
+  pull_request:
+    types: [opened, reopened, synchronize]
 env:
   ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true
   MAVEN_OPTS: -Dhttp.keepAlive=false -Dmaven.wagon.http.pool=false -Dmaven.wagon.http.retryHandler.class=standard -Dmaven.wagon.http.retryHandler.count=3
